--- a/templates/pages/users/index.html
+++ b/templates/pages/users/index.html
@@ -3,7 +3,10 @@
 
     <div class="users-wrapper">
         <a ng-repeat="user in users" class="card-users">
-            <div class="card" title="{{user.name}}"></div>
+            <div class="card" title="{{user.name}}">
+                <h2 class="h3">{{user.name}}</h2>
+                <p>{{user.bio}}</p>
+            </div>
         </a>
     </div>
 </div>
