works with routes now

--- a/templates/pages/notes/index.html
+++ b/templates/pages/notes/index.html
@@ -1,7 +1,7 @@
 <div class="note-wrapper">
     <div class="note-wrapper">
         <div class="not">
-            <h1 title="No"></h1>
+            <h1 title="No">Notes</h1>
         </div>
 
         <div class="not">
