--- a/templates/pages/notes/index.html
+++ b/templates/pages/notes/index.html
@@ -4,18 +4,10 @@
             <h1 title="No">Notes</h1>
         </div>
         <p ng-if="createController.errors">{{createController.errors}}</p>
-        <div class="note-wrapper">
-            <a class="card-notes" ng-repeat="note in indexController.notes" ng-href="#/notes/{{note.id}}">
-                <div class="card" title="{{note.title}}">
-                    <div ng-if="icon">
-                        <i class="icon icon-card {{note.icon}]"></i>
-                    </div>
-                    <h2 class="h3">
-                       {{note.title}} 
-                    </h2>
-                    <p>{{note.note}}</p>
-                </div>
-            </a>
+        <div class="note-wrapper row">
+            <div class="card-notes col-sm-6" ng-repeat="note in indexController.notes" >
+                <nw-card note="note"></nw-card>
+            </div>
         </div>
     </div>
 </div>
