--- a/templates/directives/nw-card.html
+++ b/templates/directives/nw-card.html
@@ -9,5 +9,9 @@
             <i ng-if="note.icon" class="glyphicon {{note.icon}}"></i>
         </h2>
     </div>
-    <p class="panel-body hidden" ng-bind-html="note.note"></p>
+    <p class="panel-body hidden" >
+        <markdown md-text="note.note" class="note-text"></markdown>
+    </p>
+
+
 </div>
