header active links

--- a/templates/pages/users/index.html
+++ b/templates/pages/users/index.html
@@ -1,12 +1,19 @@
-<div class="users-wrapper">
+<div class="users-wrapper ">
     <h1>Users</h1>
 
-    <div class="users-wrapper">
-        <a ng-repeat="user in users" class="card-users">
-            <div class="card" title="{{user.name}}">
-                <h2 class="h3">{{user.name}}</h2>
-                <p>{{user.bio}}</p>
+    <div class="users-wrapper row-fluid">
+        <div ng-repeat="user in users" class="col-sm-6 card-users">
+            <div class="panel panel-default card" title="{{user.name}}">
+                <div class="panel-heading">
+                    <a ng-href="#/users/{{user.id}}">
+                        <h2 class="h3">{{user.name}}</h2>
+                    </a>
+                </div>
+                <div class="panel-body">
+                    <img ng-src="{{gravatarUrl(user.email)}}" alt="">
+                    <p>{{user.bio}}</p>
+                </div>
             </div>
-        </a>
+        </div>
     </div>
 </div>
