finished course, filter filter and directive wrapper

--- a/templates/directives/nw-category-select.html
+++ b/templates/directives/nw-category-select.html
@@ -5,5 +5,6 @@
         <br/>
         <nw-category-item ng-repeat="category in categories" category="category">
         </nw-category-item>
+        <a ng-click="activeCategory = null"><i class="glyphicon glyphicon-ban-circle"></i> Clear</a>
     </div>
 </div>
