--- a/templates/pages/notes/index.html
+++ b/templates/pages/notes/index.html
@@ -5,7 +5,7 @@
         </div>
         <p ng-if="createController.errors">{{createController.errors}}</p>
         <div class="note-wrapper row">
-            <div class="card-notes col-sm-6" ng-repeat="note in indexController.notes" >
+            <div class="card-notes col-sm-6" ng-repeat="note in indexController.notes | filter:{category:activeCategory.name} | filter:search" >
                 <nw-card note="note"></nw-card>
             </div>
         </div>
